# RawSocketsChat

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
src/: socket.cpp  socket.h
src/client/: client.h  main.cpp
src/server/: main.cpp  server.cpp  server.h
